--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <header>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </header>
+<header>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</header>
 
-        <article>
-            <time>published: 09.03.2024, 14:00</time>
-            <h2><a href="">My first post</a></h2>
-            <p>Kalingaw ba ani hahaha.</p>
-        </article>
-
-        <article>
-            <time>published: 09.03.2024, 14:00</time>
-            <h2><a href="">My second post</a></h2>
-            <p>Maka information overload hahaha.</p>
-        </article>
-    </body>
-</html>
+{% for post in posts %}
+    <article>
+        <time>published: {{ post.published_date }}</time>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </article>
+{% endfor %}
